<resources>
    <string name="app_name">HitStreamr BETA</string>
    <string name="package_name">com.hitstreamr.hitstreamrbeta</string>
    <string name="logo_wht" />
    <string name="logo_white">TODO</string>
    <string name="welcome2">Uninterrupted music and ad-free \n videos with more control.</string>
    <string name="welcome">Welcome to HitStreamr:</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="text_logo_wht">text_logo_wht</string>
    <string name="basic_account">LISTENER</string>
    <string name="artist_account">ARTIST / BAND</string>
    <string name="are_you_a_label_click_here">CLICK HERE.</string>
    <string name="sidebar">sidebar</string>
    <string name="title_activity_authenticator">AuthenticatorActivity</string>
    <string name="logout">LOGOUT</string>
    <string name="facebook_app_id">255531158547053</string>
    <string name="fb_login_protocol_scheme">fb255531158547053</string>
    <string name="title_activity_drawer_menu">DrawerMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="general_settings">General Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="payment_preferences">Payment Preferences</string>
    <string name="invite_a_friend">Invite A Friend</string>
    <string name="help_center">Help Center</string>
    <string name="legal_agreements">Legal Agreements</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="clear_user_data">Clear user data? \n You will have to reconnect your HitStreamr account.</string>
    <string name="help_center_text">We are currently working on an in-app help center for your convenience. \n\n In the meantime, please refer to our online help desk.\n\n Thank you.</string>
    <string name="help_desk_button">Help Desk</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="update_over_wifi_button">Only update data over Wi-Fi</string>
    <string name="update_over_wifi_descript">Only update faves, reposts, etc over wifi.</string>
    <string name="clear_application_cache">Clear Application Cache</string>
    <string name="clear_application_cache_descript">Clear the app cache to free up memory on your device.</string>
    <string name="analytics_settings">Analytics</string>
    <string name="analytics_settings_descript">Enabled analytics allows us to collect data about your use of this app, which helps us improve the app. For details, refer to our privacy policy.</string>
    <string name="crash_log_settings">Crash Log</string>
    <string name="crash_log_settings_descript">Enabled crash logs help us improve the app significantly. We don\'t collect any personal data. For details, refer to our privacy policy.</string>
    <string name="new_follower_setting">New Follower</string>
    <string name="repost_of_your_videos_setting">Repost of your videos</string>
    <string name="new_post_by_followed_user_setting">New post by followed user</string>
    <string name="faves_on_your_video_setting">Faves on your video</string>
    <string name="comment_on_your_video_setting">Comment on your video</string>
    <string name="new_hitstreamr_features_setting">New HitStreamr Features</string>
    <string name="surveys_and_feedback_setting">Surveys and feedback</string>
    <string name="hitstreamr_tips_and_offers_setting">HitStreamr tips and offers</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="push_notifications_descript">Turn on all mobile notifications or select which to receive individually.</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="email_notificaions_descript">Turn on all email notifications or select which to receive individually.</string>
    <string name="invitation_title"><![CDATA[Hey, Get HitStreamr ASAP!]]></string>
    <string name="invite_text">Know a friend or artist who would love our app? Invite them to join by clicking the button below!</string>
    <string name="phone_number_text">+1&#8211;000&#8211;000&#8211;0000</string>
    <string name="type_basic">BASIC</string>
    <string name="video_selection">Video Selected</string>
    <string name="video_not_selection">Video not Selected</string>
    <string name="type_artist">ARTIST</string>
    <string name="type_label">LABEL</string>
    <string name="child_basic">BasicAccounts</string>
    <string name="child_artist">ArtistAccounts</string>
    <string name="child_label">LabelAccounts</string>
    <string name="skip_button">Skip</string>
    <string name="next_button">NEXT</string>
    <string name="select_genres">Select Genres</string>
    <string name="genre_subheading">Select at least 3 Genres for the best experience</string>
    <string name="blank_image">blank</string>
    <string name="nav_home">Home</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_activity">Activity</string>
    <string name="nav_library">Library</string>
    <string name="no_results">No Results</string>
    <string name="search">Search</string>
    <string name="image_selection">Image Selected</string>
    <string name="image_not_selection">Image not Selected</string>
    <string name="agree_tos_privacy">By signing in, I agree that I have read and agree to the Terms of Service and Privacy Policy.</string>
    <string name="create_account">Don\'t have an account? Sign Up here!</string>
    <string name="sign_in_button">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password_hint">Password</string>
    <string name="email_request_rest_password">Enter email associated with account.</string>
    <string name="confirm">Confirm</string>
    <string name="follow_notification_channel_id">New Follows</string>
    <string name="copyrightclaim">If you are the copyright owner of this \n video and believe it has been uploaded \n without your permission,
please follow \n these directions to submit a copyright \n infrengment notice.</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="featured_videos">FEATURED</string>
    <string name="more">MORE</string>
    <string name="fresh_releases">FRESH RELEASES</string>
    <string name="trending_now">TRENDING NOW</string>
    <string name="artists_to_watch">ARTISTS TO WATCH</string>
    <string name="popular_people">POPULAR PEOPLE</string>
    <string name="watch_again">WATCH AGAIN</string>
    <string name="get_verified">Get Verified</string>
    <string name="feedback">Feedback</string>
    <string name="verification2">A verified account has a check that appears next to a HitStreamr account\'s name to indicate that the account is the authentic. Submit all requests to verify@hitstreamr.com.</string>
    <string name="verification3">Submitting a request for verification does not guarantee that your account will be verified.</string>
    <string name="verification4">-Email/Username \n-First/Last Name \n-Known As \n-Photo ID front and back</string>
    <string name="delete_vid_confirmation">Wait! \n \n Are you sure you want to delete this video?</string>
    <string name="delete_playlist_confirmation">Are you sure? \n\n Once the playlist is deleted, this action cannot be undone.</string>
    <string name="sponsored">SPONSORED</string>
    <string name="hs_player_channel_id">Hitstreamr Player Channel</string>
    <string name="label_info_text">text here</string>
    <string name="invitation_message">Hey, check out this new streaming app called HitStreamr. It\'s Ad-free with No Subscriptions, plus you can listen in the background! \n\nClick on the link and start streaming free Today! \n\n </string>
    <string name="domain_url">https://hitstreamr.page.link</string>
    <string name="google_store_link">https://play.google.com/store/apps/details?id=com.hitstreamr.hitstreamrbeta</string>
    <!--<string name="invitation_custom_image"></string>-->
    <string name="invitation_cta">Invitation CTA</string>
    <string name="contributorHelp">Add the username of your contributor. \n\nDon\'t see your contributor(s)? \n\nInvite fellow artists to join the app via the \'Invite A Friend\' tab in the menu!</string>
    <string name="rate_dialog_title">Rate Us!</string>
    <string name="rate_dialog_message">If you enjoy this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate Us!</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>
    <string name="new_user_credits_verbiage">Welcome to HitStreamr! Enjoy ad-free music videos and background video play forever! As a token of our appreciation, here\'s 150 streaming credits on us to get you started!</string>
</resources>
