<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.Welcome"
    android:background="@drawable/background_splash">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:src="@drawable/round_hitstreamr_logo_wht"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/text_logo_wht" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="70dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome2"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="60dp">

                <Button android:id="@+id/create_account_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/create_an_account"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button1"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_marginEnd="15dp"
                    tools:ignore="ButtonStyle" />

                <Button android:id="@+id/signin_button"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:background="@drawable/button2"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>




</RelativeLayout>