<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <Button
            android:id="@+id/closeBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_close_"
            android:layout_gravity="right"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/legal_agreements"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            />


            <Button
                android:id="@+id/tos_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/terms_of_service"
                android:onClick="open"
                android:layout_marginTop="60dp"/>

        <Button
            android:id="@+id/pp_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/privacy_policy"
            android:onClick="open"/>





    </LinearLayout>

</RelativeLayout>