<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.PickGenre">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginBottom="20dp">

    <TextView
        android:id="@+id/selectGenresHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_genres"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/selectGenresSubheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
        android:text="@string/genre_subheading"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/genreView"
            android:layout_width="match_parent"
            android:layout_height="460dp"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/dotsLayout"
        android:layout_width="368dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
       android:gravity="bottom"
        android:padding="10dp">

        <Button
            android:id="@+id/skipButton"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/skip_button"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/nextButton"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/next_button"
            android:textAlignment="viewEnd"
            android:textColor="@color/litgryAccent" />

    </LinearLayout>

</RelativeLayout>