<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@color/colorAccent">

        <Button
            android:id="@+id/closeBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_close_"
            android:layout_gravity="right"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_center"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:padding="20dp"
            android:text="@string/help_center_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/help_desk_button"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/help_desk_button"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button1"
            android:textColor="@color/colorAccent"
            android:onClick="open"
            android:layout_marginTop="100dp"/>


    </LinearLayout>



</RelativeLayout>