<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.SignInActivity"
    android:background="@drawable/gradient1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/backBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingEnd="5dp"
                    android:text="Sign In"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,RtlCompat" />
                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="24dp"
                    android:src="@drawable/sidebar_page_type"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/sidebar" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            tools:ignore="UseCompoundDrawables"
            android:layout_marginTop="30dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher_round"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/basic_account" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="Email"
                android:background="@drawable/button2"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingStart="10dp"
                android:layout_marginBottom="10dp"
                android:textCursorDrawable = "@null"/>

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:background="@drawable/button2"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingStart="10dp"
                android:layout_marginBottom="15dp"
                android:textCursorDrawable = "@null"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />


            <Button
                android:id="@+id/signin_button"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:text="@string/sign_in_button"
                android:textColor="@android:color/white"
                android:background="@drawable/button1"
                android:layout_gravity="center_horizontal"/>


            <com.facebook.login.widget.LoginButton
                android:id="@+id/fblogin_button"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp" />


            <TextView
                android:id="@+id/textviewsignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_tos_privacy"
                android:textColor="@color/colorAccent"
                android:textAlignment="center"
                android:layout_marginTop="35dp"
                android:textSize="10sp"/>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>